--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
         <!--Fontawesome-->
         <script src="https://use.fontawesome.com/a43005f6db.js"></script>
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113301365-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-113301365-1');
+      </script>
+
+
       </head>
 
       <body>
