link to live babbler app

--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
                   <div class="card">
                     <img class="card-img-top" src="images/babbler_screenshot.png" alt="Screenshot of the home page of Babbler">
                     <div class="card-body">
-                      <h5 class="card-title"><a href="#">Babbler</a></h5>
-                      <p class="card-text">A chat application using Django and python-channels.</p>
+                      <h5 class="card-title"><a href="https://babbler-ktakats.herokuapp.com/">Babbler</a></h5>
+                      <p class="card-text">A chat application using Django and Django Channels.</p>
                     </div>
                     <div class="card-footer text-muted">
                       <div class="d-flex justify-content-between">
                         <div>
-                          Django, Python-Channels, PostgreSQL, TDD
+                          Django, Django Channels, PostgreSQL, TDD
                         </div>
                         <div>
                           <a href="https://github.com/ktakats/babbler" class="text-muted" target="_blank"><i class="fa fa-github-alt"></i></a>
