--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                   <div class="card">
                     <img class="card-img-top" src="images/babbler_screenshot.png" alt="Screenshot of the home page of Babbler">
                     <div class="card-body">
-                      <h5 class="card-title"><a href="https://babbler-ktakats.herokuapp.com/">Babbler</a></h5>
+                      <h5 class="card-title"><a href="https://babbler-ktakats.herokuapp.com/" target="_blank">Babbler</a></h5>
                       <p class="card-text">A chat application using Django and Django Channels.</p>
                     </div>
                     <div class="card-footer text-muted">
