--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>Portfolio | Katalin Takats</title>
+        <title>Portfolio | Katalin Takáts</title>
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"/>
@@ -30,7 +30,7 @@
       <body>
         <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light p-3">
           <div class="container">
-            <a class="navbar-brand" href="#">Katalin Takats</a>
+            <a class="navbar-brand" href="#">Katalin Takáts</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -68,7 +68,7 @@
                   <div class="col-2 lead">Programming languages</div>
                   <div class="col-4">
                     <ul>
-                    <li>Python: numpy, scipy, scikit-learn</li>
+                    <li>Python: numpy, scipy, scikit-learn, pandas, etc.</li>
                     <li>Javascript</li>
                     <li>R</li>
                   </ul>
@@ -116,9 +116,9 @@
                   <div class="col-2 lead">Machine learning</div>
                   <div class="col-2">
                     <ul>
-                      <li>scikit-learn</li>
-                      <li>tensorflow</li>
-                      <li>keras</li>
+                      <li>Scikit-learn</li>
+                      <li>Tensorflow</li>
+                      <li>Keras</li>
                     </ul>
                   </div>
                 </div>
